@@ -4,7 +4,7 @@
 
 pkgbase="openoffice-base-beta"
 pkgname=('openoffice-base-beta' 'openoffice-sdk-beta')
-_OO_milestone=OOO330_m5
+_OO_milestone=OOO330_m6
 pkgver=3.3.0_${_OO_milestone/OOO/ooo} # m3 = beta 1
 pkgrel=1
 arch=('i686' 'x86_64')
@@ -28,6 +28,7 @@ makedepends=(# the real makedeps
              # from main OOo the deps
             'curl'  'libwpd' 'libxaw' 'neon'
 	    'mesa'  'libxslt' 'icu' 'redland' 'libgraphite' 'hyphen' 'lpsolve')
+_additional_source_url=http://hg.services.openoffice.org/binaries
 source=(${_OO_milestone}.tar.xz
 	http://tools.openoffice.org/unowinreg_prebuild/680/unowinreg.dll
 	startcenter.desktop
@@ -39,8 +40,168 @@ source=(${_OO_milestone}.tar.xz
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/cppu-lbnames-enable-gcc-4.5.diff
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/sal-cpprt-gcc-4.5-workaround.diff
 	cppunit_gcc45.diff
-	openoffice-beta.profile)
+	openoffice-beta.profile
+	${_additional_source_url}/63ddc5116488985e820075e65fbe6aa4-openssl-0.9.8o.tar.gz
+	${_additional_source_url}/09357cc74975b01714e00c5899ea1881-pixman-0.12.0.tar.gz
+	${_additional_source_url}/0b49ede71c21c0599b0cc19b353a6cb3-README_apache-commons.txt
+	${_additional_source_url}/68dd2e8253d9a7930e9fd50e2d7220d0-hunspell-1.2.9.tar.gz
+	${_additional_source_url}/128cfc86ed5953e57fe0f5ae98b62c2e-libtextcat-2.2.tar.gz
+	${_additional_source_url}/17410483b5b5f267aa18b7e00b65e6e0-hsqldb_1_8_0.zip
+	${_additional_source_url}/1756c4fa6c616ae15973c104cd8cb256-Adobe-Core35_AFMs-314.tar.gz
+	${_additional_source_url}/18f577b374d60b3c760a3a3350407632-STLport-4.5.tar.gz
+	${_additional_source_url}/1f24ab1d39f4a51faf22244c94a6203f-xmlsec1-1.2.14.tar.gz
+	${_additional_source_url}/24be19595acad0a2cae931af77a0148a-LICENSE_source-9.0.0.7-bj.html
+	${_additional_source_url}/26b3e95ddf3d9c077c480ea45874b3b8-lp_solve_5.5.tar.gz
+	${_additional_source_url}/284e768eeda0e2898b0d5bf7e26a016e-raptor-1.4.18.tar.gz
+	${_additional_source_url}/2a177023f9ea8ec8bd00837605c5df1b-jakarta-tomcat-5.0.30-src.tar.gz
+	${_additional_source_url}/2ae988b339daec234019a7066f96733e-commons-lang-2.3-src.tar.gz
+	${_additional_source_url}/2c9b0f83ed5890af02c0df1c1776f39b-commons-httpclient-3.1-src.tar.gz
+	${_additional_source_url}/2f6ecca935948f7db92d925d88d0d078-icu4c-4_0_1-src.tgz
+	${_additional_source_url}/ca4870d899fd7e943ffc310a5421ad4d-liberation-fonts-ttf-1.06.0.20100721.tar.gz
+	${_additional_source_url}/35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
+	${_additional_source_url}/35efabc239af896dfb79be7ebdd6e6b9-gentiumbasic-fonts-1.10.zip
+	${_additional_source_url}/377a60170e5185eb63d3ed2fae98e621-README_silgraphite-2.3.1.txt
+	${_additional_source_url}/39bb3fcea1514f1369fcfc87542390fd-sacjava-1.3.zip
+	${_additional_source_url}/3ade8cfe7e59ca8e65052644fed9fca4-epm-3.7.tar.gz
+	${_additional_source_url}/3c219630e4302863a9a83d0efde889db-commons-logging-1.1.1-src.tar.gz
+	${_additional_source_url}/48470d662650c3c074e1c3fabbc67bbd-README_source-9.0.0.7-bj.txt
+	${_additional_source_url}/48d8169acc35f97e05d8dcdfd45be7f2-lucene-2.3.2.tar.gz
+	${_additional_source_url}/4a660ce8466c9df01f19036435425c3a-glibc-2.1.3-stub.tar.gz
+	${_additional_source_url}/4ea70ea87b47e92d318d4e7f5b940f47-cairo-1.8.0.tar.gz
+	${_additional_source_url}/599dc4cc65a07ee868cf92a667a913d2-xpdf-3.02.tar.gz
+	${_additional_source_url}/5aba06ede2daa9f2c11892fbd7bc3057-libserializer.zip
+	${_additional_source_url}/b92261a5679276c400555004937af965-nss-3.12.6-with-nspr-4.8.4.tar.gz
+	${_additional_source_url}/67b42915c8432abf0a922438f00860a2-libxml.zip
+	${_additional_source_url}/7740a8ec23878a2f50120e1faa2730f2-libxml2-2.7.6.tar.gz
+	${_additional_source_url}/7376930b0d3f3d77a685d94c4a3acda8-STLport-4.5-0119.tar.gz
+	${_additional_source_url}/79600e696a98ff95c2eba976f7a8dfbb-liblayout.zip
+	${_additional_source_url}/798b2ffdc8bcfe7bca2cf92b62caf685-rhino1_5R5.zip
+	${_additional_source_url}/ecb2e37e45c9933e2a963cabe03670ab-curl-7.19.7.tar.gz
+	${_additional_source_url}/8294d6c42e3553229af9934c5c0ed997-stax-api-1.0-2-sources.jar
+	${_additional_source_url}/8ea307d71d11140574bfb9fcc2487e33-libbase.zip
+	${_additional_source_url}/bd30e9cf5523cdfc019b94f5e1d7fd19-cppunit-1.12.1.tar.gz
+	${_additional_source_url}/a06a496d7a43cbdc35e69dbe678efadb-libloader.zip
+	${_additional_source_url}/a169ab152209200a7bad29a275cb0333-seamonkey-1.1.14.source.tar.gz
+	${_additional_source_url}/a4d9b30810a434a3ed39fc0003bbd637-LICENSE_stax-api-1.0-2-sources.html
+	${_additional_source_url}/a7983f859eafb2677d7ff386a023bc40-xsltml_2.1.2.zip
+	${_additional_source_url}/abc405d0bdd3ee22782d7aa20e440f08-zlib-1.1.4.tar.gz
+	${_additional_source_url}/ada24d37d8d638b3d8a9985e80bc2978-source-9.0.0.7-bj.zip
+	${_additional_source_url}/af3c3acf618de6108d65fcdc92b492e1-commons-codec-1.3-src.tar.gz
+	${_additional_source_url}/ba1015b59c112d44d7797b62fe7bee51-neon-0.29.3.tar.gz
+	${_additional_source_url}/bc702168a2af16869201dbe91e46ae48-LICENSE_Python-2.6.1
+	${_additional_source_url}/c441926f3a552ed3e5b274b62e86af16-STLport-4.0.tar.gz
+	${_additional_source_url}/ca66e26082cab8bb817185a116db809b-redland-1.0.8.tar.gz
+	${_additional_source_url}/cd5997284f4ba1e8dde5d1e5869fc342-libwpd-0.8.8.tar.gz
+	${_additional_source_url}/d0b5af6e408b8d2958f3d83b5244f5e8-hyphen-2.4.tar.gz
+	${_additional_source_url}/d1a3205871c3c52e8a50c9f18510ae12-libformula.zip
+	${_additional_source_url}/d35724900f6a4105550293686688bbb3-silgraphite-2.3.1.tar.gz
+	${_additional_source_url}/d4c4d91ab3a8e52a2e69d48d34ef4df4-core.zip
+	${_additional_source_url}/d70951c80dabecc2892c919ff5d07172-db-4.7.25.NC-custom.tar.gz
+	${_additional_source_url}/dbb3757275dc5cc80820c0b4dd24ed95-librepository.zip
+	${_additional_source_url}/dbd5f3b47ed13132f04c685d608a7547-jpeg-6b.tar.gz
+	${_additional_source_url}/e0707ff896045731ff99e99799606441-README_db-4.7.25.NC-custom.txt
+	${_additional_source_url}/e81c2f0953aa60f8062c05a4673f2be0-Python-2.6.1.tar.bz2
+	${_additional_source_url}/e61d0364a30146aaa3001296f853b2b9-libxslt-1.1.26.tar.gz
+	${_additional_source_url}/ea570af93c284aa9e5621cd563f54f4d-bsh-2.0b1-src.tar.gz
+	${_additional_source_url}/ea91f2fb4212a21d708aced277e6e85a-vigra1.4.0.tar.gz
+	${_additional_source_url}/ee8b492592568805593f81f8cdf2a04c-expat-2.0.1.tar.gz
+	${_additional_source_url}/f3e2febd267c8e4b13df00dac211dd6d-flute.zip
+	${_additional_source_url}/f7925ba8491fe570e5164d2c72791358-libfonts.zip
+	${_additional_source_url}/fb7ba5c2182be4e73748859967455455-README_stax-api-1.0-2-sources.txt
+	${_additional_source_url}/fca8706f2c4619e2fa3f8f42f8fc1e9d-rasqal-0.9.16.tar.gz
+	${_additional_source_url}/fcc6df1160753d0b8c835d17fdeeb0a7-boost_1_39_0.tar.gz
+	${_additional_source_url}/fdb27bfe2dbe2e7b57ae194d9bf36bab-SampleICC-1.3.2.tar.gz
+	${_additional_source_url}/fe5b3e2b7c4577f30dc001054365653e-dejavu-fonts-ttf-2.30.zip
+	${_additional_source_url}/831126a1ee5af269923cfab6050769fe-mysql-connector-cpp.zip
+	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
+	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2)
 options=('!distcc' '!ccache' '!makeflags')
+md5sums=('7f2abd4df3366e75b3ac187405e0f517'
+         'e3a0b76dcd876f3d721ee7183729153d'
+         'aa65d79fe9023e982835c77227ead2b0'
+         '71f136a31e296a04ab68932a31dd533e'
+         '2f17bd4253e1d674005086e8ee562dd6'
+         '1dc7480a04f572ad136d35923a2af66d'
+         'c8e82b4d2324fe62ad8c6e29213e80b5'
+         '863a3ab2c17a3d11b8fa3ec321986366'
+         'e666e8cea0ef557a8bce41c58dd16408'
+         'cf01fa2669f828864146842e040e3cf8'
+         'bb5ada95f7b11a5cac5d669f7ae8baaa'
+         '2e8c89d4bfda9b5ccd3b118c87eff62a'
+         '63ddc5116488985e820075e65fbe6aa4'
+         '09357cc74975b01714e00c5899ea1881'
+         '0b49ede71c21c0599b0cc19b353a6cb3'
+         '68dd2e8253d9a7930e9fd50e2d7220d0'
+         '128cfc86ed5953e57fe0f5ae98b62c2e'
+         '17410483b5b5f267aa18b7e00b65e6e0'
+         '1756c4fa6c616ae15973c104cd8cb256'
+         '18f577b374d60b3c760a3a3350407632'
+         '1f24ab1d39f4a51faf22244c94a6203f'
+         '24be19595acad0a2cae931af77a0148a'
+         '26b3e95ddf3d9c077c480ea45874b3b8'
+         '284e768eeda0e2898b0d5bf7e26a016e'
+         '2a177023f9ea8ec8bd00837605c5df1b'
+         '2ae988b339daec234019a7066f96733e'
+         '2c9b0f83ed5890af02c0df1c1776f39b'
+         '2f6ecca935948f7db92d925d88d0d078'
+         'ca4870d899fd7e943ffc310a5421ad4d'
+         '35c94d2df8893241173de1d16b6034c0'
+         '35efabc239af896dfb79be7ebdd6e6b9'
+         '377a60170e5185eb63d3ed2fae98e621'
+         '39bb3fcea1514f1369fcfc87542390fd'
+         '3ade8cfe7e59ca8e65052644fed9fca4'
+         '3c219630e4302863a9a83d0efde889db'
+         '48470d662650c3c074e1c3fabbc67bbd'
+         '48d8169acc35f97e05d8dcdfd45be7f2'
+         '4a660ce8466c9df01f19036435425c3a'
+         '4ea70ea87b47e92d318d4e7f5b940f47'
+         '599dc4cc65a07ee868cf92a667a913d2'
+         '5aba06ede2daa9f2c11892fbd7bc3057'
+         'b92261a5679276c400555004937af965'
+         '67b42915c8432abf0a922438f00860a2'
+         '7740a8ec23878a2f50120e1faa2730f2'
+         '7376930b0d3f3d77a685d94c4a3acda8'
+         '79600e696a98ff95c2eba976f7a8dfbb'
+         '798b2ffdc8bcfe7bca2cf92b62caf685'
+         'ecb2e37e45c9933e2a963cabe03670ab'
+         '8294d6c42e3553229af9934c5c0ed997'
+         '8ea307d71d11140574bfb9fcc2487e33'
+         'bd30e9cf5523cdfc019b94f5e1d7fd19'
+         'a06a496d7a43cbdc35e69dbe678efadb'
+         'a169ab152209200a7bad29a275cb0333'
+         'a4d9b30810a434a3ed39fc0003bbd637'
+         'a7983f859eafb2677d7ff386a023bc40'
+         'abc405d0bdd3ee22782d7aa20e440f08'
+         'ada24d37d8d638b3d8a9985e80bc2978'
+         'af3c3acf618de6108d65fcdc92b492e1'
+         'ba1015b59c112d44d7797b62fe7bee51'
+         'bc702168a2af16869201dbe91e46ae48'
+         'c441926f3a552ed3e5b274b62e86af16'
+         'ca66e26082cab8bb817185a116db809b'
+         'cd5997284f4ba1e8dde5d1e5869fc342'
+         'd0b5af6e408b8d2958f3d83b5244f5e8'
+         'd1a3205871c3c52e8a50c9f18510ae12'
+         'd35724900f6a4105550293686688bbb3'
+         'd4c4d91ab3a8e52a2e69d48d34ef4df4'
+         'd70951c80dabecc2892c919ff5d07172'
+         'dbb3757275dc5cc80820c0b4dd24ed95'
+         'dbd5f3b47ed13132f04c685d608a7547'
+         'e0707ff896045731ff99e99799606441'
+         'e81c2f0953aa60f8062c05a4673f2be0'
+         'e61d0364a30146aaa3001296f853b2b9'
+         'ea570af93c284aa9e5621cd563f54f4d'
+         'ea91f2fb4212a21d708aced277e6e85a'
+         'ee8b492592568805593f81f8cdf2a04c'
+         'f3e2febd267c8e4b13df00dac211dd6d'
+         'f7925ba8491fe570e5164d2c72791358'
+         'fb7ba5c2182be4e73748859967455455'
+         'fca8706f2c4619e2fa3f8f42f8fc1e9d'
+         'fcc6df1160753d0b8c835d17fdeeb0a7'
+         'fdb27bfe2dbe2e7b57ae194d9bf36bab'
+         'fe5b3e2b7c4577f30dc001054365653e'
+         '831126a1ee5af269923cfab6050769fe'
+         '067201ea8b126597670b5eff72e1f66c'
+         'cf8a6967f7de535ae257fa411c98eb88')
 
 # source PKGBUILD && mksource
 mksource() {
@@ -52,7 +213,6 @@ mksource() {
 }
 
 build() {
-echo ${SRCDEST}
 	cd ${srcdir}/${_OO_milestone}
 
 	# just to make sure that it will detect the desired JDK/JVM - we want openjdk6
@@ -63,7 +223,7 @@ echo ${SRCDEST}
 	[ -z "${ANT_HOME}" ] && . /etc/profile.d/apache-ant.sh
 
 	# some speedups
-	export SMP="6"
+	export SMP="5"
 	MAXMODULESFLAG="-P${SMP}"
 	MAXPROCESSESFLAG="-P${SMP}"
 	export nodep=true
@@ -178,6 +338,8 @@ echo ${SRCDEST}
 	# get external source tarballs if needed
 	export TARFILE_LOCATION=${SRCDEST}
 	./fetch_tarballs.sh ooo.lst
+	# remove tmp source dir or makechrootpkg would fail to copy back the sources
+	rmdir ${SRCDEST}/tmp
 	
 	# Setup environment for build
 	if [ "$CARCH" = "x86_64" ]; then
